--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
     "pg": "^7.4.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1"
   }
 }
