--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "pluralize": "^7.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
