--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "homepage": "https://github.com/bbones/rddiscoverer#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "knex": "^0.14.4",
     "koa": "^2.5.0",
     "koa-body": "^2.5.0",
     "koa-router": "^7.4.0",
     "pg": "^7.4.1",
-    "pluralize": "^7.0.0"
+    "pluralize": "^7.0.0",
+    "qs": "^6.5.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
